--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+certifi==2022.12.7
+chardet==4.0.0
 click==8.0.3
 Flask==2.0.2
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+idna==2.10
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 PyMySQL==1.0.2
-SQLAlchemy==1.4.29
-Werkzeug==2.0.2
 requests==2.25.1
+SQLAlchemy==1.4.29
+thefuzz==0.19.0
+urllib3==1.26.15
+Werkzeug==2.0.2
